--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,60 +1,164 @@
+// Variables
+$font: 'Inconsolata';
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+//////////////////////
+
+*{box-sizing: border-box;}
+
 html, body{
-  font-family: monospace;
+  font-family: $font;
 }
 header{
-  text-align: center;
+  margin: 40px 0;
+  h1{
+    font-size: 2rem;
+  }
+  p{
+
+  }
+  span::before{
+    content: '';
+    background-color: red;
+    width: 20px;
+    height: 3px;
+  }
 }
 .container{
-  max-width: 800px;
+  max-width: 1000px;
   width: 100%;
   margin: 0 auto;
 }
+
+$pad: 20px;
+
+.grid {
+  background: white;
+  margin: 0 0 $pad 0;
+  
+  &:after {
+    /* Or @extend clearfix */
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
+[class*='col-'] {
+  float: left;
+  padding-right: $pad;
+  .grid &:last-of-type {
+    padding-right: 0;
+  }
+}
+
+.col-1-2 {
+  width: 50%;
+}
+.col-2-3 {
+  width: 66.66%;
+}
+.col-1-3 {
+  width: 33.33%;
+}
+
+.menu-bar{
+  background-color: #bdc3c7;
+  padding: 5px;
+  border-radius: 3px 3px 0 0;
+  .circle{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #95a5a6;
+    float: left;
+    margin-right: 5px;
+  }
+}
 #resume-wrapper{
-  margin: 40px 0;
   border-radius: 4px;
   background-color: #ecf0f1;
   // box-shadow: 0 3px 8px rgba(0,0,0,0.2);
   border: 1px solid #bdc3c7;
   color:#95a5a6;
-  #resume-menu-bar{
-    background-color: #bdc3c7;
-    padding: 5px;
-    border-radius: 3px 3px 0 0;
-    .circle{
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background-color: #95a5a6;
-      float: left;
-      margin-right: 5px;
-    }
-  }
+
   #resume-content{
     padding: 20px;
-    line-height: 140%;
+    line-height: 160%;
+    height: 500px;
+    overflow-y:scroll;
   }
 }
 
+#console-wrapper{
+  border: 1px solid #bdc3c7;
+  border-radius: 4px;
+}
 #console{
   border:15px solid #ecf0f1;
   background-color: #ecf0f1;
   padding: 10px;
-  border-radius: 4px;
-  height: 200px;
+  border-radius: 0 0 4px 4px;
+  height: 500px;
   overflow-y:scroll;
   color:#555;
-  margin-top: 40px;
   ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    font-size: 11pt;
+    font-size: 10pt;
     li{
+      margin-top: 1px;
+      padding: inherit;
       &.commandError{
         color: #e74c3c;
+        margin-left: 13px;
       }
       &.commandResponse{
         color: #7f8c8d;
+        margin-left: 13px;
       }
     }
   }
@@ -62,15 +166,15 @@ header{
     margin: 0;
     padding: 0;
     .command-prompt-container{
-      font-family: monospace;
-      font-size: 11pt;
+      font-family: $font;
+      font-size: 10pt;
     }
     input{
       background-color: transparent;
       outline: none;
       border:none;
-      font-family: monospace;
-      font-size: 11pt;
+      font-family: $font;
+      font-size: 10pt;
       margin: 0;
       padding: 0;
       color:#555;
@@ -81,6 +185,10 @@ header{
 
 //syntax highlighting
 pre {
+  font-family: $font;
+  font-size: 10pt;
+  margin: 0;
+  padding: 0;
   .string { color: #27ae60; }
   .number { color: darkorange; }
   .boolean { color: blue; }
