--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,14 +50,18 @@ table {
 
 html, body{
   font-family: $font;
+  background-color: #ecf0f1;
 }
 header{
-  margin: 40px 0;
+  padding: 40px 0;
+  font-family: 'Montserrat';
+  color: #8f8f8f;
   h1{
     font-size: 2rem;
+    font-weight: bold;
   }
   p{
-
+    font-weight: thin;
   }
   span::before{
     content: '';
@@ -66,48 +70,31 @@ header{
     height: 3px;
   }
 }
+
+footer{
+  text-align: center;
+  color:#333;
+  padding: 40px;
+  margin-bottom: 40px;
+  font-size: 0.825rem;
+}
+
 .container{
-  max-width: 1000px;
+  max-width: 700px;
   width: 100%;
   margin: 0 auto;
+  padding: 15px;
 }
 
-$pad: 20px;
-
-.grid {
-  background: white;
-  margin: 0 0 $pad 0;
-  
-  &:after {
-    /* Or @extend clearfix */
-    content: "";
-    display: table;
-    clear: both;
-  }
-}
-
-[class*='col-'] {
-  float: left;
-  padding-right: $pad;
-  .grid &:last-of-type {
-    padding-right: 0;
-  }
-}
-
-.col-1-2 {
-  width: 50%;
-}
-.col-2-3 {
-  width: 66.66%;
-}
-.col-1-3 {
-  width: 33.33%;
+#page-wrap{
+  padding-left: 25%;
 }
 
 .menu-bar{
   background-color: #bdc3c7;
   padding: 5px;
   border-radius: 3px 3px 0 0;
+  text-align: center;
   .circle{
     width: 10px;
     height: 10px;
@@ -116,34 +103,36 @@ $pad: 20px;
     float: left;
     margin-right: 5px;
   }
+  span{
+    font-size: 0.7rem;
+    color:#555;
+    margin-left: -25px;
+  }
 }
 #resume-wrapper{
   border-radius: 4px;
-  background-color: #ecf0f1;
-  // box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+  background-color: #fff;
+  box-shadow: 0 3px 16px rgba(0,0,0,0.1);
   border: 1px solid #bdc3c7;
   color:#95a5a6;
 
   #resume-content{
     padding: 20px;
     line-height: 160%;
-    height: 500px;
-    overflow-y:scroll;
   }
 }
 
 #console-wrapper{
-  border: 1px solid #bdc3c7;
-  border-radius: 4px;
+  position: fixed;
+  width: 25%;
 }
 #console{
-  border:15px solid #ecf0f1;
-  background-color: #ecf0f1;
+  border:15px solid #34495e;
+  background-color: #34495e;
   padding: 10px;
-  border-radius: 0 0 4px 4px;
-  height: 500px;
+  height: 100vh;
   overflow-y:scroll;
-  color:#555;
+  color:#fff;
   ul {
     list-style: none;
     margin: 0;
@@ -177,7 +166,7 @@ $pad: 20px;
       font-size: 10pt;
       margin: 0;
       padding: 0;
-      color:#555;
+      color:#fff;
       width: 90%;
     }
   }
