--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,8 @@ footer {
 .menu-bar span {
   font-size: 0.7rem;
   color: #555;
-  margin-left: -25px;
+  margin: 0 0 0 -25px;
+  padding: 0;
 }
 
 #resume-wrapper {
@@ -136,6 +137,7 @@ footer {
 #console-wrapper {
   position: fixed;
   width: 25%;
+  max-width: 300px;
 }
 
 #console {
@@ -165,7 +167,12 @@ footer {
 }
 
 #console ul li.commandResponse {
-  color: #7f8c8d;
+  color: #9f9f9f;
+  margin-left: 13px;
+}
+
+#console ul li.commandWarning {
+  color: #e67e22;
   margin-left: 13px;
 }
 
