--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700);
+
 // Variables
-$font: 'Inconsolata';
+$font: 'Ubuntu Mono';
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -85,7 +87,7 @@ footer{
 }
 
 .container{
-  max-width: 700px;
+  max-width: 800px;
   width: 100%;
   margin: 0 auto;
   padding: 15px;
@@ -187,6 +189,7 @@ footer{
 
 //syntax highlighting
 pre {
+  line-height:150%;
   font-family: $font;
   font-size: 10pt;
   margin: 0;
