--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -53,7 +53,12 @@ table {
 }
 
 @keyframes typing { from { width: 0; } }
-@keyframes blink-caret { 50% { border-color: transparent; } }
+@keyframes blink-caret { 50% { border-color: rgba(white, 0); } }
+@keyframes fade-in {to {opacity: 1;}}
+@keyframes slide-left { from {left:20px}}
+@keyframes slide-right { to {left:0px}}
+@keyframes slide-up { from {top:20px}}
+@keyframes zoom-in {from {transform:scale(0.95);}}
 
 *{box-sizing: border-box;}
 
@@ -77,18 +82,23 @@ header{
 
 		// padding-right: 0.3em;
 		
-		width:calc(13ch + 26px);
+		width: calc(12ch + 26px);
 		white-space:nowrap;
 		overflow:hidden;
-		border-right: .6em solid #27ae60;
+		border-right: .1em solid darkorange;
 
-		animation: typing 1s steps(13, end), /* # of steps = # of characters */
-							blink-caret 1s step-end infinite;
+
+		animation: typing 1s steps(12, end), blink-caret 1s step-end infinite;
 	}
 	p{
 		font-weight: 400;
 		text-transform: uppercase;
 		letter-spacing: 5px;
+		opacity: 0;
+		position: relative;
+		left: 0;
+		animation: fade-in 0.5s forwards, slide-left 0.5s;
+		animation-delay: 0.5s;
 	}
 	span::before{
 		content: '';
@@ -148,8 +158,14 @@ footer{
 	border-radius: 4px;
 	background-color: #2c2c2c;
 	box-shadow: 0 8px 40px rgba(0,0,0,0.4);
-	// border: 1px solid #bdc3c7;
 	color:#95a5a6;
+
+	position: relative;
+	top: 0;
+	opacity: 0;
+
+	animation: fade-in 0.5s forwards, zoom-in 0.5s;
+	animation-delay: 0.7s;
 
 	#resume-content{
 		padding: 20px;
@@ -163,12 +179,14 @@ footer{
 	// max-width: 150px;
 	width: 33%;
 	max-width: 400px;
+
 }
 #console{
 	border:15px solid #444;
 	// background-color: #34495e;
 	background-color: #444;
 	padding: 10px;
+	font-size:2em;
 	height: 100vh;
 	overflow-y:scroll;
 	color:#fff;
@@ -176,7 +194,7 @@ footer{
 		list-style: none;
 		margin: 0;
 		padding: 0;
-		font-size: 10pt;
+		font-size: 11pt;
 		li{
 			margin-top: 1px;
 			padding: inherit;
@@ -199,14 +217,14 @@ footer{
 		padding: 0;
 		.command-prompt-container{
 			font-family: $font;
-			font-size: 10pt;
+			font-size: 11pt;
 		}
 		input{
 			background-color: transparent;
 			outline: none;
 			border:none;
 			font-family: $font;
-			font-size: 10pt;
+			font-size: 11pt;
 			margin: 0;
 			padding: 0;
 			color:#fff;
