--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,104 +1,16 @@
-@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700);
-
 // Variables
 $font: 'Ubuntu Mono';
 $green: #27ae60;
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
+
+@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700);
+@import 'partials/animations';
+@import 'partials/reset';
+@import 'partials/structure';
+
+
+
 //////////////////////
-
-::-webkit-scrollbar {
-    display: none;
-}
-
-@keyframes typing { from { width: 0; } }
-@keyframes blink-caret { 50% { border-color: rgba(white, 0); } }
-@keyframes fade-in {to {opacity: 1;}}
-@keyframes slide-left { from {left:20px}}
-@keyframes slide-right { to {left:0px}}
-@keyframes slide-up { from {top:20px}}
-@keyframes zoom-in {from {transform:scale(0.9);}}
-
-@keyframes zoom-out {
-	15% {
-		transform:scale(0.23) translateY(0%);
-		opacity: 1;
-	}
-	30% {
-		transform:scale(0.25) translateY(0%);
-		opacity: 1;
-	}
-	60% {
-		transform: scale(0.25) translateY(300%);
-	}
-	61% {
-		opacity: 0;
-	}
-	63% {
-		transform: scale(1) translateY(0%);
-	}
-	65% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-
-	}
-}
-
-@keyframes trash-can{
-	20% {
-		top: calc(100vh - 300px);
-	}
-	60% {
-		top: calc(100vh - 300px);
-	}
-	70% {
-		top: 100vh;
-	}
-}
 
 .trash {
 	position: fixed;
@@ -106,7 +18,8 @@ table {
 	left: 50%;
 	transform: translateX(-50%);
 	width:50vw;
-	height: auto;
+	height: 50vw;
+	transform-origin: center;
 	// z-index: 9999;
 	img{
 		position: absolute;
@@ -132,33 +45,7 @@ table {
 }
 
 
-.fade-in {
-	opacity:0;
-	animation:fade-in 0.5s forwards;
-	animation-delay:0.75s;
-}
 
-*{box-sizing: border-box;}
-
-html, body{
-	font-family: $font;
-	background-color: #2c2c2c;
-}
-#wrapper {
-	background-color: #555;
-	&.crash{
-		overflow:hidden;
-		height:100vh;
-		animation: zoom-out 4s forwards;
-		position: relative;
-		z-index: 1000;
-	}
-
-}
-
-.content {
-  flex: 1;
-}
 header{
 	padding: 40px 0;
 	font-family: $font;
@@ -213,19 +100,7 @@ footer{
 	}
 }
 
-.container{
-	max-width: 800px;
-	width: 100%;
-	margin: 0 auto;
-	padding: 15px;
-	display: flex;
-	min-height: 100vh;
-	flex-direction: column;
-}
 
-#page-wrap{
-	padding-left: 33%;
-}
 
 .menu-bar{
 	background-color: #bdc3c7;
@@ -356,19 +231,7 @@ pre {
 	}
 }
 
-.clearfix:after {
-	visibility: hidden;
-	display: block;
-	font-size: 0;
-	content: " ";
-	clear: both;
-	height: 0;
-}
-.clearfix { display: inline-block; }
-/* start commented backslash hack \*/
-* html .clearfix { height: 1%; }
-.clearfix { display: block; }
-/* close commented backslash hack */
+
 
 #mobile-message {
 	display:none;
@@ -384,7 +247,6 @@ pre {
 		}
 	}
 }
-
 @media (max-width: 768px) {
 	#console-wrapper{
 		display: none;
@@ -405,3 +267,4 @@ pre {
 		display:none;
 	}
 }
+
