--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,7 +63,6 @@ header{
 		overflow:hidden;
 		border-right: .1em solid darkorange;
 
-
 		animation: typing 1s steps(12, end), blink-caret 1s step-end infinite;
 	}
 	p{
@@ -90,12 +89,16 @@ footer{
 	padding: 60px 0 0px;
 	font-size: 0.825rem;
 	p {
-		margin-bottom: 5px;
+		margin-bottom: 10px;
 	}
 	a{
+		text-decoration:none;
 		color:$green;
+		font-size:9pt;
+		border-bottom: 2px solid rgba($green, 0.3);
 		&:hover{
-			font-weight:bold;
+			border-bottom: 2px solid rgba($green, 0.8);
+			
 		}
 	}
 }
@@ -128,17 +131,15 @@ footer{
 	background-color: #2c2c2c;
 	box-shadow: 0 8px 40px rgba(0,0,0,0.4);
 	color:#95a5a6;
-
 	position: relative;
 	top: 0;
 	opacity: 0;
-
 	animation: fade-in 0.5s forwards, zoom-in 0.5s;
-	// animation-delay: 0.7s;
 
 	#resume-content{
 		padding: 20px;
-		line-height: 160%;
+
+
 	}
 }
 
@@ -158,34 +159,36 @@ footer{
 	// background-color: #34495e;
 	background-color: #444;
 	padding: 10px;
-	font-size:2em;
+	// font-size:1.5em;
 	height: 100vh;
 	overflow-y:scroll;
 	color:#fff;
+	font-size: 11pt;
 	ul {
 		list-style: none;
 		margin: 0;
 		padding: 0;
-		font-size: 11pt;
 		li{
-			margin-top: 1px;
+			// margin-top: 0px;
 			padding: inherit;
+			line-height:100%;
+
 			&.commandError{
 				color: #e74c3c;
-				margin-left: 13px;
+				margin-left: 2ch;
 			}
 			&.commandResponse{
 				color: #9f9f9f;
-				margin-left: 13px;
+				margin-left: 2ch;
 			}
 			&.commandResponseBold{
 				color: #cfcfcf;
-				margin-left: 13px;
+				margin-left: 2ch;
 				// font-weight:bold;
 			}
 			&.commandWarning{
 				color: #e67e22;
-				margin-left: 13px;
+				margin-left: 2ch;
 			}
 		}
 	}
@@ -206,6 +209,7 @@ footer{
 			padding: 0;
 			color:#fff;
 			width: 90%;
+			line-height:100%;
 		}
 	}
 }
@@ -217,21 +221,27 @@ pre {
 	white-space: -pre-wrap;      /* Opera 4-6 */
 	white-space: -o-pre-wrap;    /* Opera 7 */
 	word-wrap: break-word;       /* Internet Explorer 5.5+ */
-	line-height:150%;
+	line-height:170%;
 	font-family: $font;
-	font-size: 10pt;
+	font-size: 11pt;
 	margin: 0;
 	padding: 0;
+	color: #7e7e7e;
+
 	.string { color: $green; }
 	.number { color: darkorange; }
 	.boolean { color: blue; }
 	.null { color: magenta; }
-	.key { color: #7f8c8d; font-weight: bold }
+	.key { color: #a8a8a8; }
 	a{
 		color:$green;
 		text-decoration: none;
+		border-bottom: 2px solid rgba($green, 0.2);
+
 		&:hover{
-			text-decoration:underline;
+			border-bottom: 2px solid rgba($green, 0.8);
+
+			// text-decoration:underline;
 		}
 	}
 }
