--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -111,15 +111,17 @@ footer{
 	border-radius: 3px 3px 0 0;
 	text-align: center;
 	.circle{
-		width: 10px;
-		height: 10px;
+		width: 11px;
+		height: 11px;
 		border-radius: 50%;
 		background-color: #95a5a6;
 		float: left;
-		margin-right: 5px;
+		// margin-right: 5px;
+		margin: 3px;
+		margin-top: 4px;
 	}
 	span{
-		font-size: 0.7rem;
+		font-size: 0.8rem;
 		color:#5a6a6b;
 		margin: -15px 0 0 -25px;
 		padding: 0;
@@ -134,6 +136,7 @@ footer{
 	position: relative;
 	top: 0;
 	opacity: 0;
+	line-height:100%;
 	animation: fade-in 0.5s forwards, zoom-in 0.5s;
 
 	#resume-content{
@@ -155,11 +158,15 @@ footer{
 	// animation-delay: 0.7s;
 }
 #console{
+	
 	border:15px solid #444;
 	// background-color: #34495e;
+	line-height:100%;
+
 	background-color: #444;
 	padding: 10px;
 	// font-size:1.5em;
+
 	height: 100vh;
 	overflow-y:scroll;
 	color:#fff;
@@ -221,7 +228,7 @@ pre {
 	white-space: -pre-wrap;      /* Opera 4-6 */
 	white-space: -o-pre-wrap;    /* Opera 7 */
 	word-wrap: break-word;       /* Internet Explorer 5.5+ */
-	line-height:170%;
+	line-height:150%;
 	font-family: $font;
 	font-size: 11pt;
 	margin: 0;
