updated start command and push updates

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,7 +28,7 @@ $green: #27ae60;
 		height: auto;
 	}
 	&.crash {
-		animation: trash-can 4s;	
+		animation: trash-can 4s;
 		&#trash-front {
 			// position: absolute;
 
@@ -56,7 +56,7 @@ header{
 		margin-bottom: 10px;
 
 		// padding-right: 0.3em;
-		
+
 		width: calc(12ch + 26px);
 		white-space:nowrap;
 		overflow:hidden;
@@ -97,7 +97,7 @@ footer{
 		border-bottom: 2px solid rgba($green, 0.3);
 		&:hover{
 			border-bottom: 2px solid rgba($green, 0.8);
-			
+
 		}
 	}
 }
@@ -129,7 +129,8 @@ footer{
 }
 #resume-wrapper{
 	border-radius: 4px;
-	background-color: #2c2c2c;
+    background-color: #2c2c2c;
+	// background-color: #263647;
 	box-shadow: 0 8px 40px rgba(0,0,0,0.4);
 	color:#95a5a6;
 	position: relative;
@@ -147,20 +148,16 @@ footer{
 
 #console-wrapper{
 	position: fixed;
-	// width: 25%;
-	// max-width: 150px;
 	width: 33%;
 	max-width: 400px;
 	opacity: 0;
 	left: -200px;
 	animation: fade-in 0.5s forwards, slide-right 0.5s forwards;
-	// animation-delay: 0.7s;
 }
 #console{
-	
+
 	border:15px solid #444;
-	// background-color: #34495e;
-	line-height:100%;
+	background-color: #34495e;
 
 	background-color: #444;
 	padding: 10px;
@@ -177,7 +174,7 @@ footer{
 		li{
 			// margin-top: 0px;
 			padding: inherit;
-			line-height:100%;
+			line-height:110%;
 
 			&.commandError{
 				color: #e74c3c;
@@ -215,7 +212,7 @@ footer{
 			padding: 0;
 			color:#fff;
 			width: 90%;
-			line-height:100%;
+			line-height:110%;
 		}
 	}
 }
@@ -288,4 +285,3 @@ pre {
 		display:none;
 	}
 }
-
