--- a/src/scss/partials/_animations.scss
+++ b/src/scss/partials/_animations.scss
@@ -1,6 +1,7 @@
 @keyframes typing { from { width: 0; } }
 @keyframes blink-caret { 50% { border-color: rgba(white, 0); } }
 @keyframes fade-in {to {opacity: 1;}}
+@keyframes fade-out {from {opacity: 1;} to {opacity: 0;}}
 @keyframes slide-left { from {left:20px}}
 @keyframes slide-right { to {left:0px}}
 @keyframes slide-up { from {top:20px}}
