--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,21 @@
+@font-face {
+	font-family:"Ubuntu Mono";
+	src:url("./fonts/UbuntuMono-R.eot?") format("eot"),
+		url("./fonts/UbuntuMono-R.woff") format("woff"),
+		url("./fonts/UbuntuMono-R.ttf") format("truetype"),
+		url("./fonts/UbuntuMono-R.svg#UbuntuMono-Regular") format("svg");
+	font-weight:normal;
+	font-style:normal;
+}
+
 // Variables
-$font: 'Ubuntu Mono';
+$font: 'Ubuntu Mono', monospace;
+// $font: 'Karla', monospace;
 $green: #27ae60;
 
 
 @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700);
+@import url('https://fonts.googleapis.com/css?family=Karla:400,700');
 @import 'partials/animations';
 @import 'partials/reset';
 @import 'partials/structure';
@@ -47,46 +59,56 @@ $green: #27ae60;
 
 header{
 	padding: 40px 0;
-	font-family: $font;
-	color: #fff;
+	font-family: 'Karla';
+	color: #555;
 	h1{
-		font-size: 2rem;
+		font-size: 3rem;
 		font-weight: 400;
 		letter-spacing: 2px;
 		margin-bottom: 10px;
+		font-weight: bold;
+		padding-right: 0.3em;
 
-		// padding-right: 0.3em;
-
-		width: calc(12ch + 26px);
-		white-space:nowrap;
-		overflow:hidden;
-		border-right: .1em solid darkorange;
-
-		animation: typing 1s steps(12, end), blink-caret 1s step-end infinite;
 	}
 	p{
 		font-weight: 400;
 		text-transform: uppercase;
 		letter-spacing: 5px;
-		opacity: 0;
-		position: relative;
-		left: 0;
-		animation: fade-in 0.5s forwards, slide-left 0.5s;
-		animation-delay: 0.5s;
+		// opacity: 0;
+		// position: relative;
+		// left: 0;
+		// animation: fade-in 0.5s forwards, slide-left 0.5s;
+		// animation-delay: 0.5s;
 	}
-	span::before{
-		content: '';
-		background-color: red;
-		width: 20px;
-		height: 3px;
+	#toggle-interactive{
+		float: right;
+		border-radius: 50%;
+		cursor: pointer;
+		width: 60px;
+		height: 60px;
+		opacity: 0.8;
+		margin-top: 10px;
+		transition: transform 0.5s, background-image 0.5s;
+		background-image: url(../img/code.svg);
+		&.interactiveMode {
+			background-image: url(../img/close.svg);
+			transform: rotateZ(360deg);
+		}
+		&.nonInteractiveMode {
+			background-image: url(../img/code.svg);
+
+		}
+		&:hover{
+			opacity: 0.9;
+
+		}
 	}
 }
 
 footer{
-	text-align: center;
-	color:white;
-	padding: 60px 0 0px;
+	padding: 80px 0 40px;
 	font-size: 0.825rem;
+	color: #555;
 	p {
 		margin-bottom: 10px;
 	}
@@ -94,7 +116,9 @@ footer{
 		text-decoration:none;
 		color:$green;
 		font-size:9pt;
+		padding-bottom: 2px;
 		border-bottom: 2px solid rgba($green, 0.3);
+		margin-right: 4px;
 		&:hover{
 			border-bottom: 2px solid rgba($green, 0.8);
 
@@ -127,45 +151,165 @@ footer{
 
 	}
 }
+
+#landing-wrapper {
+	font-family: 'Karla';
+	color: #555;
+	font-size: 14pt;
+	line-height: 140%;
+	margin-top: 30px;
+	transition: visbility 0s, opacity 0.5s;
+	z-index: 1000;
+	#projects {
+		margin-top: 10px;
+		.placeholder{
+			width: auto;
+			text-align: center;
+			background-color: #efefef;
+			color: #555;
+			margin: 50% 0 0 50%;
+			padding: 20px 15px;
+			font-size: 12pt;
+			border-radius: 2px;
+			transform: translate(-50%, -50%);
+		}
+		.project{
+			margin-top: 10px;
+			position: static;
+			width: 100%;
+			border-radius: 3px;
+			background-color: #efefef;
+			img{
+				width: 100%;
+				height: auto;
+				border-radius: 2px 2px 0 0 ;
+			}
+			.caption{
+				padding: 10px 15px 13px;
+				h3{
+					font-size: 14pt;
+				}
+				p{
+					font-size: 11pt;
+				}
+				.links {
+					margin-top: 5px;
+					a {
+						color: #555;
+						text-decoration: none;
+						background-color: #dedede;
+						padding: 4px 10px;
+						border-radius: 50px;
+						margin-right: 3px;
+						&:hover{
+							background-color: #3498db;
+							color: white;
+
+						}
+					}
+				}
+			}
+		}
+	}
+	h2{
+		font-size: 24pt;
+		font-weight: bolder;
+		margin-bottom: 10px;
+	}
+	&.interactiveMode {
+		// display: none;
+
+		visibility:hidden;
+		opacity: 0;
+		z-index: 0;
+		height: 0;
+		overflow: hidden;
+
+	}
+	&.nonInteractiveMode {
+		visibility:visible;
+		opacity: 1;
+		z-index: 1000;
+		height: auto;
+		// display: block;
+
+	}
+}
 #resume-wrapper{
+	font-family: 'Ubuntu Mono', monospace;
+	position: absolute;
 	border-radius: 4px;
-    background-color: #2c2c2c;
+  background-color: #555;
+	// background-color: #2C3642;
 	// background-color: #263647;
 	box-shadow: 0 8px 40px rgba(0,0,0,0.4);
 	color:#95a5a6;
 	position: relative;
 	top: 0;
 	opacity: 0;
+	z-index: 0;
 	line-height:100%;
-	animation: fade-in 0.5s forwards, zoom-in 0.5s;
+	transition: visibility 0s, opacity 0.5s;
+	height: 0;
+	overflow: hidden;
+
+	&.interactiveMode{
+		visibility:visible;
+		opacity: 1;
+		height: auto;
+		z-index: 1000;
+		// display: block;
+	}
+	&.nonInteractiveMode{
+		opacity: 0;
+		visibility:hidden;
+		height: 0;
+		overflow: hidden;
+		z-index: 0;
+		// display: none;
+	}
 
 	#resume-content{
 		padding: 20px;
+		#resume-code {
+			font-family: 'Ubuntu Mono', monospace;
 
+		}
 
 	}
 }
 
 #console-wrapper{
+	font-family: 'Ubuntu Mono', monospace;
 	position: fixed;
-	width: 33%;
-	max-width: 400px;
+	width: 27%;
+	max-width: 450px;
 	opacity: 0;
 	left: -200px;
-	animation: fade-in 0.5s forwards, slide-right 0.5s forwards;
+	transition: 0.5s;
+	&.interactiveMode{
+		left: 0px;
+		opacity: 1;
+	}
+	&.nonInteractiveMode{
+		left: -200px;
+		opacity: 0;
+	}
 }
 #console{
 
-	border:15px solid #444;
-	background-color: #34495e;
+	// border:15px solid #444;
+	border:15px solid #e0e0e0;
+	// background-color: #34495e;
+	// background-color: #444;
+	background-color: #e0e0e0;
 
-	background-color: #444;
 	padding: 10px;
 	// font-size:1.5em;
 
 	height: 100vh;
 	overflow-y:scroll;
-	color:#fff;
+	color:#555;
 	font-size: 11pt;
 	ul {
 		list-style: none;
@@ -181,11 +325,11 @@ footer{
 				margin-left: 2ch;
 			}
 			&.commandResponse{
-				color: #9f9f9f;
+				color: #8f8f8f;
 				margin-left: 2ch;
 			}
 			&.commandResponseBold{
-				color: #cfcfcf;
+				color: #6f6f6f;
 				margin-left: 2ch;
 				// font-weight:bold;
 			}
@@ -199,18 +343,18 @@ footer{
 		margin: 0;
 		padding: 0;
 		.command-prompt-container{
-			font-family: $font;
+			// font-family: $font;
 			font-size: 11pt;
 		}
 		input{
 			background-color: transparent;
+			font-family: 'Ubuntu Mono', monospace;
 			outline: none;
 			border:none;
-			font-family: $font;
 			font-size: 11pt;
 			margin: 0;
 			padding: 0;
-			color:#fff;
+			color:#555;
 			width: 90%;
 			line-height:110%;
 		}
@@ -229,13 +373,13 @@ pre {
 	font-size: 11pt;
 	margin: 0;
 	padding: 0;
-	color: #7e7e7e;
+	color: #a0a0a0;
 
 	.string { color: $green; }
 	.number { color: darkorange; }
 	.boolean { color: blue; }
 	.null { color: magenta; }
-	.key { color: #a8a8a8; }
+	.key { color: #b0b0b0; }
 	a{
 		color:$green;
 		text-decoration: none;
@@ -266,19 +410,46 @@ pre {
 	}
 }
 @media (max-width: 768px) {
-	#console-wrapper{
-		display: none;
-	}
+
 	#page-wrap{
 		padding-left: 0;
 	}
 
-	#resume-wrapper {
-		display:none;
+	#toggle-interactive{
+		display: none;
 	}
 
-	#mobile-message {
-		display:block;
+	[class*='col-'] {
+		width: 100%;
+		padding-left: 0;
+	  padding: 0;
+		.grid &:last-of-type {
+	    padding-left: 0;
+			padding-right: 0;
+	  }
+	}
+
+	header{
+		text-align: center;
+		h1 {
+			font-size: 2.5rem;
+		}
+		p{
+			font-size: 10pt;
+		}
+	}
+
+	footer {
+		[class*='col-'] {
+			margin-top: 25px;
+		}
+		.align-right {
+			text-align: center;
+		}
+	}
+
+	#placeholder{
+		display: none;
 	}
 
 	.trash{
