--- a/src/scss/partials/_structure.scss
+++ b/src/scss/partials/_structure.scss
@@ -1,5 +1,5 @@
 html, body{
-	font-family: $font;
+	font-family: $font-mono;
 	// background-color: #7f7f7f;
 	background: linear-gradient(270deg, #d78eff, #8ec7ff, #a74dff);
 	background-size: 300% 300%;
