added router for home/resume views & added new projects

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -210,11 +210,11 @@ footer{
 			text-align: center;
 			background-color: #efefef;
 			color: #555;
-			margin: 50% 0 0 50%;
 			padding: 20px 15px;
 			font-size: 12pt;
 			border-radius: 2px;
-			transform: translate(-50%, -50%);
+			margin-top: 20px;
+			opacity: 0.5;
 		}
 		.project{
 			margin-top: 10px;
