--- a/src/scss/partials/_structure.scss
+++ b/src/scss/partials/_structure.scss
@@ -79,10 +79,10 @@ $pad: 10px;
 [class*='col-'] {
   float: left;
   padding-right: $pad;
-  .grid &:last-of-type {
-    padding-left: $pad;
-		padding-right: 0;
-  }
+  // .grid &:last-of-type {
+  //   padding-left: $pad;
+	// 	padding-right: 0;
+  // }
 }
 .col-2-3 {
   width: 66.66%;
