tooltips and router fixed

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -104,10 +104,10 @@ header{
 		margin-top: 10px;
 		transition: transform 0.5s, background-image 0.5s, opacity 0.2s;
 		background-image: url(../img/code.svg);
-		animation: wiggle 1s;
+		// animation: wiggle 1s;
 		&.interactiveMode {
 			background-image: url(../img/close.svg);
-			transform: rotateZ(360deg);
+			// transform: rotateZ(360deg);
 		}
 		&.nonInteractiveMode {
 			background-image: url(../img/code.svg);
@@ -443,6 +443,65 @@ pre {
 }
 .mobile-hide{
 	display: block;
+}
+
+[data-tooltip] {
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+}
+
+/* Hide the tooltip content by default */
+[data-tooltip]:before,
+[data-tooltip]:after {
+  // visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+	transition: opacity 0.3s ease;
+}
+
+/* Position tooltip above the element */
+[data-tooltip]:before {
+  position: absolute;
+  bottom: 110%;
+  left: 50%;
+  margin-bottom: 5px;
+  margin-left: -80px;
+  padding: 7px;
+  width: 160px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #000;
+  background-color: hsla(0, 0%, 20%, 0.9);
+  color: #fff;
+  content: attr(data-tooltip);
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.2;
+}
+
+/* Triangle hack to make tooltip look like a speech bubble */
+[data-tooltip]:after {
+  position: absolute;
+  bottom: 110%;
+  left: 50%;
+  margin-left: -5px;
+  width: 0;
+  border-top: 5px solid #000;
+  border-top: 5px solid hsla(0, 0%, 20%, 0.9);
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  content: " ";
+  font-size: 0;
+  line-height: 0;
+}
+
+/* Show tooltip content on hover */
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after {
+  visibility: visible;
+  opacity: 1;
 }
 
 @media (max-width: 768px) {
