updated images, descriptions, and json data

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -230,9 +230,16 @@ footer{
 				padding: 10px 15px 13px;
 				h3{
 					font-size: 14pt;
+					font-weight: bold;
+					margin-bottom: 0.2em;
 				}
 				p{
 					font-size: 11pt;
+				}
+				p.description {
+					line-height: 140%;
+					color:lighten(#555, 5%);
+					margin-bottom: 0.8em;
 				}
 				.links {
 					margin-top: 5px;
@@ -422,7 +429,7 @@ pre {
 
 	.string { color: $green; }
 	.number { color: darkorange; }
-	.boolean { color: blue; }
+	.boolean { color: #f1c40f; }
 	.null { color: magenta; }
 	.key { color: #b0b0b0; }
 	a{
