hide demo button on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -452,6 +452,9 @@ pre {
 .mobile-hide{
 	display: block;
 }
+a.mobile-hide-link{
+	visibility: visible;
+}
 
 [data-tooltip] {
   position: relative;
@@ -569,6 +572,10 @@ pre {
 		display: block
 	}
 	.mobile-hide{
+		display: none;
+	}
+	a.mobile-hide-link {
+		visibility: collapse;
 		display: none;
 	}
 }
