--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -477,14 +477,15 @@ a.mobile-hide-link{
   bottom: 110%;
   left: 50%;
   margin-bottom: 5px;
-  margin-left: -80px;
+  // margin-left: -50%;
+	transform: translateX(-50%);
   padding: 7px;
-  width: 160px;
+  width: 120px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  background-color: #000;
-  background-color: hsla(0, 0%, 20%, 0.9);
+  // background-color: #000;
+  background-color: hsla(0, 0%, 20%, 0.7);
   color: #fff;
   content: attr(data-tooltip);
   text-align: center;
@@ -500,7 +501,7 @@ a.mobile-hide-link{
   margin-left: -5px;
   width: 0;
   border-top: 5px solid #000;
-  border-top: 5px solid hsla(0, 0%, 20%, 0.9);
+  border-top: 5px solid hsla(0, 0%, 20%, 0.7);
   border-right: 5px solid transparent;
   border-left: 5px solid transparent;
   content: " ";
