--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,24 +1,3 @@
-@font-face {
-  font-family: "Ubuntu Mono";
-  src: url("./fonts/UbuntuMono-R.eot?") format("eot"), url("./fonts/UbuntuMono-R.woff") format("woff"), url("./fonts/UbuntuMono-R.ttf") format("truetype"), url("./fonts/UbuntuMono-R.svg#UbuntuMono-Regular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Karla";
-  src: url("./fonts/Karla-Regular.ttf") format("truetype"), url("./fonts/karla-regular.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Karla";
-  src: url("./fonts/Karla-Bold.ttf") format("truetype");
-  font-weight: bold;
-  font-style: normal;
-}
-
 // Variables
 $font-mono: 'Ubuntu Mono', monospace;
 $font-sans-serif: 'Karla', "Helvetica Neue", Helvetica, sans-serif;
@@ -58,12 +37,12 @@ header {
     opacity: 0.8;
     margin-top: 10px;
     transition: transform 0.5s, background-image 0.5s, opacity 0.2s;
-    background-image: url(../img/code.svg);
+    background-image: url('../img/code.svg');
     &.interactiveMode {
-      background-image: url(../img/close.svg);
+      background-image: url('../img/close.svg');
     }
     &.nonInteractiveMode {
-      background-image: url(../img/code.svg);
+      background-image: url('../img/code.svg');
     }
     &:hover {
       opacity: 0.9;
