--- a/src/styles/partials/_structure.scss
+++ b/src/styles/partials/_structure.scss
@@ -1,15 +1,18 @@
-html, body{
+html, body {
 	font-family: $font-mono;
 	background: linear-gradient(270deg, #d78eff, #8ec7ff, #a74dff);
 	background-size: 300% 300%;
 	color:#555;
 }
 
-*{ font-smoothing: antialiased; }
+* { 
+	font-smoothing: antialiased; 
+}
+
 #wrapper {
 	background-color: #fff;
 
-	&.crash{
+	&.crash {
 		overflow:hidden;
 		height:100vh;
 		animation: zoom-out 4s forwards;
@@ -23,7 +26,7 @@ html, body{
   flex: 1;
 }
 
-.container{
+.container {
 	max-width: 800px;
 	width: 100%;
 	margin: 0 auto;
@@ -39,76 +42,11 @@ html, body{
 
 #page-wrap{
 	transition: padding-left 0.4s ease;
+	padding-left: 0%;
 
-	&.interactiveMode {
+	&.interactive-mode {
 		padding-left: 27%;
 	}
-
-	&.nonInteractiveMode{
-		padding-left: 0%;
-	}
-}
-
-.clearfix:after {
-	visibility: hidden;
-	display: block;
-	font-size: 0;
-	content: " ";
-	clear: both;
-	height: 0;
-}
-.clearfix { display: inline-block; }
-/* start commented backslash hack \*/
-* html .clearfix { height: 1%; }
-.clearfix { display: block; }
-/* close commented backslash hack */
-
-$pad: 10px;
-
-.grid {
-  margin: 0 0 $pad 0;
-
-  &:after {
-    /* Or @extend clearfix */
-    content: "";
-    display: table;
-    clear: both;
-  }
-}
-
-[class*='col-'] {
-  float: left;
-  padding-right: $pad;
-  // .grid &:last-of-type {
-  //   padding-left: $pad;
-	// 	padding-right: 0;
-  // }
-}
-.col-2-3 {
-  width: 66.66%;
-}
-.col-1-3 {
-  width: 33.33%;
-}
-.col-1-2 {
-  width: 50%;
-}
-.col-1-4 {
-  width: 25%;
-}
-.col-3-4 {
-  width: 75%;
-}
-.col-1-8 {
-  width: 12.5%;
-}
-
-/* Opt-in outside padding */
-.grid-pad {
-  padding: $pad 0 $pad $pad;
-  [class*='col-']:last-of-type {
-    padding-right: $pad;
-  }
 }
 
 .align-right {
